fix: solve center alignment

--- a/CIS1202/JS With DOM Activity/style.css
+++ b/CIS1202/JS With DOM Activity/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Lato:wght@700;900&display=swap');
 
+html, body {
+    height: 100%;
+}
+
+body {
+    background-color: #0f0b24;
+    display: grid;
+    place-content: center;
+}
+
 p {
     font-family: 'DM Sans';
     font-weight: 400;
@@ -13,10 +23,6 @@ h1, h2 {
 
 h2 {
     font-family: 'DM Sans';
-}
-
-body {
-    background-color: #0f0b24;
 }
 
 img {
